changed hex to rgb

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ ol {
   Header
 -----------------------*/
 .header {
-  background: #d95276;
+  background: rgb(217, 82, 118);
 }
 
 .header__top {
