--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ ol {
   margin-bottom: 35px;
 }
 .section-title span {
-  color: #d95276;
+  color: #f2b6c6;
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
@@ -159,7 +159,7 @@ ol {
   text-transform: uppercase;
   padding: 14px 30px;
   color: #ffffff;
-  background: #d95276;
+  background: #f2b6c6;
   letter-spacing: 2px;
 }
 
@@ -308,7 +308,7 @@ ol {
   Header
 -----------------------*/
 .header {
-  background: #d95276;
+  background: #f2b6c6;
 }
 
 .header__top {
@@ -547,7 +547,7 @@ ol {
   top: 15px;
   height: calc(100% - 30px);
   width: calc(100% - 30px);
-  border: 1px dashed #d95276;
+  border: 1px dashed #f2b6c6;
   content: "";
   opacity: 0.3;
 }
@@ -642,8 +642,8 @@ ol {
   bottom: -48px;
   width: 15px;
   height: 15px;
-  border: 1px solid #d95276;
-  border-color: transparent #d95276 #d95276 transparent;
+  border: 1px solid #f2b6c6;
+  border-color: transparent #f2b6c6 #f2b6c6 transparent;
   content: "";
   -webkit-transform: rotate(-135deg);
       -ms-transform: rotate(-135deg);
@@ -654,7 +654,7 @@ ol {
   transition: all, 0.3s;
 }
 .categories__item:hover {
-  background: #d95276;
+  background: #f2b6c6;
 }
 .categories__item:hover:after {
   opacity: 1;
@@ -667,7 +667,7 @@ ol {
 }
 
 .categories__item__icon span {
-  color: #d95276;
+  color: #f2b6c6;
   -webkit-transition: all, 0.2s;
   -o-transition: all, 0.2s;
   transition: all, 0.2s;
@@ -769,7 +769,7 @@ ol {
   display: inline-block;
   width: 70px;
   height: 70px;
-  background: #d95276;
+  background: #f2b6c6;
   font-size: 24px;
   color: #ffffff;
   line-height: 70px;
@@ -1033,7 +1033,7 @@ ol {
   margin-bottom: 40px;
 }
 .product__item:hover .product__item__pic .product__label span {
-  background: #d95276;
+  background: #f2b6c6;
   color: #ffffff;
 }
 .product__item:hover .product__item__text .product__item__price {
@@ -1109,7 +1109,7 @@ ol {
   font-size: 16px;
   font-weight: 600;
   display: inline-block;
-  border-bottom: 2px solid #d95276;
+  border-bottom: 2px solid #f2b6c6;
   padding-bottom: 4px;
 }
 
@@ -1232,7 +1232,7 @@ ol {
 }
 .footer__newslatter form button {
   font-size: 20px;
-  color: #d95276;
+  color: #f2b6c6;
   background: transparent;
   border: none;
   position: absolute;
@@ -1254,10 +1254,10 @@ ol {
   color: #888888;
 }
 .copyright__text i {
-  color: #d95276;
+  color: #f2b6c6;
 }
 .copyright__text a {
-  color: #d95276;
+  color: #f2b6c6;
 }
 
 .copyright__widget {
@@ -1383,7 +1383,7 @@ ol {
   display: inline-block;
   width: 70px;
   height: 70px;
-  background: #d95276;
+  background: #f2b6c6;
   font-size: 24px;
   color: #ffffff;
   line-height: 70px;
@@ -1673,7 +1673,7 @@ ol {
   font-size: 20px;
   border: 1px solid #e1e1e1;
   display: inline-block;
-  color: #d95276;
+  color: #f2b6c6;
   padding: 14px;
   line-height: 16px;
 }
@@ -1957,7 +1957,7 @@ ol {
   margin-bottom: 50px;
 }
 .coupon__code span {
-  color: #d95276;
+  color: #f2b6c6;
 }
 .coupon__code a {
   color: #444444;
@@ -1981,7 +1981,7 @@ ol {
   margin-bottom: 12px;
 }
 .checkout__input p span {
-  color: #d95276;
+  color: #f2b6c6;
 }
 .checkout__input input {
   height: 50px;
@@ -2023,7 +2023,7 @@ ol {
   visibility: hidden;
 }
 .checkout__input__checkbox label input:checked ~ .checkmark {
-  border-color: #d95276;
+  border-color: #f2b6c6;
 }
 .checkout__input__checkbox label input:checked ~ .checkmark:after {
   opacity: 1;
@@ -2044,7 +2044,7 @@ ol {
   top: -3px;
   width: 14px;
   height: 7px;
-  border: solid #d95276;
+  border: solid #f2b6c6;
   border-width: 1.5px 1.5px 0px 0px;
   -webkit-transform: rotate(127deg);
   -ms-transform: rotate(127deg);
@@ -2133,7 +2133,7 @@ ol {
   overflow: hidden;
 }
 .checkout__total__all li span {
-  color: #d95276;
+  color: #f2b6c6;
   float: right;
 }
 
@@ -2224,7 +2224,7 @@ ol {
   margin-bottom: 55px;
 }
 .class__item:hover .class__item__pic .label {
-  background: #d95276;
+  background: #f2b6c6;
 }
 .class__item:hover .class__item__text h5 a {
   text-decoration: underline;
@@ -2274,7 +2274,7 @@ ol {
 }
 .class__item__text .read_more {
   font-size: 16px;
-  color: #d95276;
+  color: #f2b6c6;
   font-weight: 600;
 }
 
@@ -2372,7 +2372,7 @@ ol {
   font-size: 14px;
   color: #ffffff;
   font-weight: 600;
-  background: #d95276;
+  background: #f2b6c6;
   display: inline-block;
   padding: 4px 15px 2px;
 }
@@ -2425,7 +2425,7 @@ ol {
   letter-spacing: 2px;
   text-transform: uppercase;
   padding-bottom: 3px;
-  border-bottom: 2px solid #d95276;
+  border-bottom: 2px solid #f2b6c6;
 }
 
 /*---------------------
@@ -2527,7 +2527,7 @@ ol {
   text-decoration: line-through;
 }
 .blog__sidebar__item .blog__sidebar__item__categories ul li:hover a span {
-  color: #d95276;
+  color: #f2b6c6;
 }
 .blog__sidebar__item .blog__sidebar__item__categories ul li a {
   font-size: 16px;
@@ -2578,7 +2578,7 @@ ol {
   visibility: hidden;
 }
 .blog__sidebar__item form label input:checked ~ .checkmark {
-  border-color: #d95276;
+  border-color: #f2b6c6;
 }
 .blog__sidebar__item form label input:checked ~ .checkmark:after {
   opacity: 1;
@@ -2599,7 +2599,7 @@ ol {
   top: -3px;
   width: 14px;
   height: 7px;
-  border: solid #d95276;
+  border: solid #f2b6c6;
   border-width: 1.5px 1.5px 0px 0px;
   -webkit-transform: rotate(127deg);
   -ms-transform: rotate(127deg);
@@ -2835,7 +2835,7 @@ ol {
 }
 .blog__details__print .primary-btn {
   background: transparent;
-  border: 1px solid #d95276;
+  border: 1px solid #f2b6c6;
   color: #111111;
 }
 .blog__details__print .primary-btn i {
