Changed light main color to light pink

--- a/sass/_blog-details.scss
+++ b/sass/_blog-details.scss
@@ -296,7 +296,7 @@
 
 .blog__details__author {
     position: relative;
-    background: #fdf3ea;
+    background: #f2dfe0;
     overflow: hidden;
     padding: 50px;
     margin-bottom: 85px;
