--- a/sass/_home-page.scss
+++ b/sass/_home-page.scss
@@ -249,7 +249,7 @@
   Testimonial
 -----------------------*/
 .testimonial {
-  background: #fdf3ea;
+  background: #f2dfe0;
   padding-top: 90px;
   padding-bottom: 70px;
 }
