--- a/css/style.css
+++ b/css/style.css
@@ -843,7 +843,7 @@ ol {
   Testimonial
 -----------------------*/
 .testimonial {
-  background: #fdf3ea;
+  background: #f2dfe0;
   padding-top: 90px;
   padding-bottom: 70px;
 }
@@ -1911,7 +1911,7 @@ ol {
 }
 
 .cart__total {
-  background: #fdf3ea;
+  background: #f2dfe0;
   padding: 35px 40px 40px;
 }
 .cart__total h6 {
@@ -2060,7 +2060,7 @@ ol {
 }
 
 .checkout__order {
-  background: #fdf3ea;
+  background: #f2dfe0;
   padding: 30px;
 }
 .checkout__order .order__title {
@@ -2279,7 +2279,7 @@ ol {
 }
 
 .class__sidebar {
-  background: #fdf3ea;
+  background: #f2dfe0;
   padding: 30px;
 }
 .class__sidebar h5 {
@@ -2897,7 +2897,7 @@ ol {
 
 .blog__details__author {
   position: relative;
-  background: #fdf3ea;
+  background: #f2dfe0;
   overflow: hidden;
   padding: 50px;
   margin-bottom: 85px;
