--- a/css/style.css
+++ b/css/style.css
@@ -3604,7 +3604,7 @@ ol {
   }
 
   .header .container {
-    position: relative;
+    /*position: relative;*/
     position: -webkit-sticky; /* Safari */
     position: sticky;
   }
