chaged body height

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@
 html,
 body {
   height: 100%;
+  height: fit-content;
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
