--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@
 html,
 body {
   height: 100%;
+  height: 0;
+  overflow: visible
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
@@ -311,6 +313,7 @@ ol {
 header{
   position: -webkit-sticky; /* Safari */
   position: sticky;
+  top: 0;
 }
 
 .header {
