--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ html,
 body {
   height: 100%;
   height: 0;
-  overflow: visible
+  overflow: visible;
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
