--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,9 @@ header{
 
 .header {
   background: #f2b6c6;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
 }
 
 .header__top {
