--- a/css/style.css
+++ b/css/style.css
@@ -310,16 +310,57 @@ ol {
   Header
 -----------------------*/
 
-.nav{
+.nav-bar{
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
   margin-top: 0;
   z-index: 10;
-  justify-content: center;
+  /* justify-content: center; */
   margin-top: 0;
   margin-bottom: 0;
   box-sizing: border-box;
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-bar .header__logo{
+  position: relative;
+  top: 0;
+  left: 0;
+  vertical-align: auto;
+  margin: 0;
+  justify-self: left;
+  flex: 1;
+  align-self: center;
+  max-height: 100%;
+}
+
+.nav-bar .col-lg-12{
+  max-width: fit-content;
+}
+
+.nav-bar .row{
+  justify-content: justify;
+  width: 100%;
+  margin: 0;
+}
+
+.nav-bar .right{
+  flex: 1;
+}
+
+.nav-bar .container{
+  margin: 32px;
+  width: 100%;
+}
+
+.header .container{
+  margin: 0;
+  width: 100%;
 }
 
 .header {
@@ -407,6 +448,14 @@ ol {
 }
 .header__logo a {
   display: inline-block;
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.header__logo img{
+  object-fit: contain;
+  max-height: 52px;
+  max-width: 100%;
 }
 
 .header__top__right {
@@ -519,11 +568,11 @@ ol {
   display: none;
 }
 .header__menu ul li a {
-  font-size: 16px;
+  font-size: 20px;
   color: #ffffff;
   display: block;
   font-weight: 600;
-  padding: 20px 35px 18px;
+  padding: 25px 40px 23px;
   letter-spacing: 1px;
   -webkit-transition: all, 0.3s;
   -o-transition: all, 0.3s;
