--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  color: #11111194;
+  color: #d95276;
   font-weight: 400;
   font-family: "Montserrat", sans-serif;
 }
@@ -110,7 +110,7 @@ ol {
   margin-bottom: 35px;
 }
 .section-title span {
-  color: #f2b6c6;
+  color: #9b9b9b;
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
@@ -120,7 +120,7 @@ ol {
 }
 .section-title h2 {
   font-size: 46px;
-  color: #111111;
+  color: #d95276;
   line-height: 60px;
   font-weight: 700;
   font-style: italic;
@@ -1296,7 +1296,7 @@ ol {
 
 .breadcrumb__text h2 {
   font-size: 50px;
-  color: #000000;
+  color: #d95276;
   font-weight: 700;
   font-style: italic;
   font-family: 'Pacifico', regular;
