--- a/css/style.css
+++ b/css/style.css
@@ -985,6 +985,7 @@ ol {
 }
 .map__iframe iframe {
   width: 100%;
+  position: left;
 }
 
 .map__inner {
@@ -3065,10 +3066,19 @@ ol {
   margin-bottom: 70px;
 }
 
-.contact__address {
-  padding-bottom: 40px;
-  border-bottom: 1px solid #e8eff4;
-  margin-bottom: 70px;
+.contact_d_address {
+
+  display: flex;
+  width: 360px;
+  padding: 32px 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+
+  border-radius: 16px;
+  background: #FFF;
+  /* My drop shadow */
+box-shadow: 0px 6px 12px -2px rgba(93, 50, 65, 0.25);
 }
 
 .contact__address__item {
