--- a/css/style.css
+++ b/css/style.css
@@ -978,13 +978,15 @@ ol {
 }
 
 .map__iframe {
-  width: 100%;
+  width: 60%;
+
   position: absolute;
-  left: 0;
+  left: 48%;
   top: 0;
 }
 .map__iframe iframe {
   width: 100%;
+  height: 100ch;
 }
 
 .map__inner {
@@ -3057,13 +3059,27 @@ ol {
 }
 
 .contact__address__item {
-  margin-bottom: 30px;
+
+background: #FFF;
+border-radius: 32px;
+display: flex;
+width: 360px;
+padding: 32px 16px;
+flex-direction: column;
+align-items: flex-start;
+gap: 24px;
+
+/* My drop shadow */
+box-shadow: 0px 6px 12px -2px rgba(93, 50, 65, 0.25);
 }
 .contact__address__item h6 {
   color: #111111;
   font-weight: 600;
   text-transform: uppercase;
   margin-bottom: 25px;
+
+
+  
 }
 .contact__address__item ul li {
   list-style: none;
