Customized about page

--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,13 @@ p {
   color: #111111;
   font-weight: 400;
   line-height: 28px;
-  margin: 0 0 15px 0;
+  margin: 0px 0px 15px 0px;
+  text-align: justify;
 }
 
 img {
   max-width: 100%;
+  object-fit: contain;
 }
 
 input:focus,
@@ -134,8 +136,8 @@ ol {
 }
 
 .spad {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 60px;
+  padding-bottom: 30px;
 }
 
 .text-white h1,
@@ -1330,7 +1332,7 @@ ol {
   About
 -----------------------*/
 .about__text p {
-  margin-bottom: 0;
+  /*margin-bottom: 0;*/
 }
 
 .about__bar .about__bar__item {
