--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,6 @@ ol {
   top: 0;
   margin-top: 0;
   z-index: 10;
-  /* justify-content: center; */
   margin-top: 0;
   margin-bottom: 0;
   box-sizing: border-box;
@@ -337,6 +336,7 @@ ol {
   flex: 1;
   align-self: center;
   max-height: 100%;
+  padding: 6px 0;
 }
 
 .nav-bar .col-lg-12{
@@ -3258,6 +3258,11 @@ ol {
   .blog__details__recipe {
     padding: 25px 40px 20px;
   }
+
+  #header-banner div:first-child {
+    display: none;
+    width: 100%;
+  }
 }
 /* Tablet Device = 768px */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -3417,6 +3422,11 @@ ol {
 
   .blog__details__ingredients__pic img {
     min-width: 100%;
+  }
+
+  #header-banner div:first-child {
+    display: none;
+    width: 100%;
   }
 }
 /* Wide Mobile = 480px */
@@ -4090,4 +4100,16 @@ ol {
   .checkout__order__products span {
     display: none;
   }
+}
+
+#header-banner{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#header-banner .header__logo{
+  height: 100%;
 }
