--- a/css/style.css
+++ b/css/style.css
@@ -979,15 +979,13 @@ ol {
 
 .map__iframe {
   width: 60%;
-
+height: 100%;
   position: absolute;
-  left: 48%;
   top: 0;
 }
-.map__iframe iframe {
-  width: 100%;
-  height: 100ch;
-}
+/* .map__iframe iframe {
+
+} */
 
 .map__inner {
   text-align: center;
@@ -3048,6 +3046,7 @@ ol {
   Contact
 -----------------------*/
 .contact .map {
+  width: 100%	;
   height: 400px;
   margin-bottom: 70px;
 }
@@ -3063,7 +3062,9 @@ ol {
 background: #FFF;
 border-radius: 32px;
 display: flex;
-width: 360px;
+margin-bottom: 32px;
+margin-right: 128px;
+width: 420px;
 padding: 32px 16px;
 flex-direction: column;
 align-items: flex-start;
@@ -3076,14 +3077,13 @@ box-shadow: 0px 6px 12px -2px rgba(93, 50, 65, 0.25);
   color: #111111;
   font-weight: 600;
   text-transform: uppercase;
-  margin-bottom: 25px;
 
 
   
 }
 .contact__address__item ul li {
   list-style: none;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
   overflow: hidden;
 }
 .contact__address__item ul li:last-child {
