--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,7 @@ ol {
   top: 0;
 }
 
-.burger-container{
+.burger-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1293,6 +1293,10 @@ ol {
 /*---------------------
   Footer
 -----------------------*/
+footer h6 {
+  border-bottom: #f2ca52 2px solid;
+}
+
 .footer {
   padding-top: 70px;
 }
@@ -1302,7 +1306,11 @@ ol {
   margin-bottom: 30px;
 }
 
-.footer__widget:after {
+.footer__widget i {
+  margin-right: 6px;
+}
+
+/* .footer__widget:after {
   position: absolute;
   right: 25px;
   top: 0;
@@ -1310,7 +1318,7 @@ ol {
   height: 165px;
   background: rgba(255, 255, 255, 0.1);
   content: "";
-}
+} */
 
 .footer__widget h6 {
   color: #ffffff;
@@ -1329,10 +1337,12 @@ ol {
 .footer__about {
   text-align: center;
   position: relative;
-  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.footer__about:after {
+/* .footer__about:after {
   position: absolute;
   right: -35px;
   top: 0;
@@ -1340,10 +1350,12 @@ ol {
   height: 165px;
   background: rgba(255, 255, 255, 0.1);
   content: "";
-}
+} */
 
 .footer__about .footer__logo {
   margin-bottom: 32px;
+  max-width: 75%;
+  align-self: center;
 }
 
 .footer__about .footer__logo a {
@@ -1374,7 +1386,7 @@ ol {
 }
 
 .footer__newslatter {
-  padding-left: 50px;
+  padding-left: 0;
   margin-bottom: 30px;
 }
 
@@ -4518,7 +4530,7 @@ ol {
   }
 }
 
-#header-banner{
+#header-banner {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -4526,6 +4538,6 @@ ol {
   align-items: center;
 }
 
-#header-banner .header__logo{
+#header-banner .header__logo {
   height: 100%;
 }
