--- a/css/facebook.css
+++ b/css/facebook.css
@@ -10,24 +10,24 @@
     justify-content: center;
 }
 
-.facebook-page iframe {
-    height: 60vh;
-    max-width: 100vw;
-    border: #f2ca52 5 solid;
-    overflow: hidden;
-    width: fit-content;
-    height: fit-content;
-    background: #f2dfe0;
-    float: left;
-}
-
 .facebook-page .iframe-wrap{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: fit-content;
+}
+
+.facebook-page iframe {
+    min-height: 400px;
+    width: 70vw;
+    max-width: 600px;
+    border: #f2ca52 5 solid;
+    overflow: hidden;
     width: 100%;
+    max-height: 100%;
+    background: #f2dfe0;
+    float: left;
 }
 /*
 <!-- facebook page frame Begin -->
