--- a/css/facebook.css
+++ b/css/facebook.css
@@ -1,33 +1,32 @@
 .facebook-page {
-    width: 100%;
+
     height: 100%;
     padding: 12px;
 
     background-color: #f2dfe0;
 
     display: flex;
-    flex-direction: row;
     justify-content: center;
 }
 
 .facebook-page .iframe-wrap{
+    width: 100%;
+    margin:auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: fit-content;
 }
 
 .facebook-page iframe {
     min-height: 400px;
     width: 70vw;
-    max-width: 600px;
+    max-width: 500px;
     border: #f2ca52 5 solid;
     overflow: hidden;
     width: 100%;
     max-height: 100%;
     background: #f2dfe0;
-    float: left;
 }
 /*
 <!-- facebook page frame Begin -->
