Products, Combos & Categories V1.1
sis

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,15 @@
 /*----------------------------------------*/
 /* Template default CSS
 /*----------------------------------------*/
+
+
+.products-gap{
+  gap: 32px;
+  justify-content: space-between;
+}
+
+/*generic styles end */
+
 html,
 body {
   min-height: 100%;
@@ -1228,13 +1237,17 @@ border-radius: 32px;
 }
 
 .product__item__pic {
-  width: 200px;
   margin: 0px;
   height: 270px;
   position: relative;
   background-position: center;
   border-radius: 32px;
 }
+
+.product_width {
+  width: 200px;
+}
+
 
 .product__item__pic .product__label {
   position: absolute;
