--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@ ol {
   letter-spacing: 2px;
   z-index: 2;
   text-align: center;
+  border: none !important;
 }
 
 .primary-btn:hover {
@@ -755,6 +756,16 @@ ol {
 
 .light-on-hover:hover img {
   opacity: 0.75;
+}
+
+.float-on-hover:hover {
+  position: relative;
+  bottom: 18px;
+}
+
+.float-on-hover:active {
+  position: relative;
+  bottom: 8px;
 }
 
 /*---------------------
@@ -3245,7 +3256,7 @@ footer a:hover {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: right;
   margin-top: 16px;
 }
 
@@ -4684,8 +4695,12 @@ box-shadow: 0px 6px 12px -2px rgba(93, 50, 65, 0.25);
   }
 
   .product__details__big__img img {
-    height: auto;
-
+    /* height: auto; */
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+    aspect-ratio: 1/1;
+    object-fit: contain;
   }
 
   .product__details__img {
